unpackaged/main/default/objects/User/fields/ccpe_r__Cost__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Cost__c</fullName>
    <description>The Cost of the User</description>
    <label>Cost ($/hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>