unpackaged/main/default/objects/User/fields/ccpe_r__Rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Rate__c</fullName>
    <description>This is the standard hourly rate of the User</description>
    <inlineHelpText>This is the standard hourly rate of the User</inlineHelpText>
    <label>Rate ($/hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>