unpackaged/main/default/objects/User/fields/Legacy_3MW_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_3MW_Id__c</fullName>
    <description>Used for holding 3MW legacy Id for User</description>
    <externalId>true</externalId>
    <label>Legacy 3MW Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>