unpackaged/main/default/objects/User/fields/Legacy_PF_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_PF_Id__c</fullName>
    <description>Used for holding PF legacy Id for User</description>
    <externalId>true</externalId>
    <label>Legacy PF Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>