unpackaged/main/default/objects/User/fields/project_cloud__Allocatable__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Allocatable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the user can have their time allocated to a project. Also used by the SchedulableCreateBlankTimesheets class to identify users who need a Timesheet created for them each week
(Cloud Coach 19-OCT-10)</description>
    <inlineHelpText>Check this box if this user needs to be assigned out to Project work and has a Cloud Coach license.</inlineHelpText>
    <label>Allocatable</label>
    <type>Checkbox</type>
</CustomField>