unpackaged/main/default/objects/User/fields/project_cloud__Hours_Day__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours_Day__c</fullName>
    <defaultValue>8</defaultValue>
    <description>This value is used for Time Based Resourcing to calculate the Hours/Hours Per Day fields on the Allocation object.</description>
    <label>Hours Per Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>