unpackaged/main/default/objects/User/fields/project_cloud__Sorting_Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sorting_Hash__c</fullName>
    <description>This field is a concatenation of the First Name + Last Name + Username to create a sortable key that can find the next alphabetical user. This is currently only used by the Capabilities Tab</description>
    <formula>LastName &amp; FirstName &amp; Username</formula>
    <inlineHelpText>This field is a concatenation of the First Name + Last Name + Username to create a sortable key that can find the next alphabetical user.</inlineHelpText>
    <label>Last, First &amp; User Name</label>
    <type>Text</type>
</CustomField>