unpackaged/main/default/objects/User/fields/QS_Create_Change_Request_Reqs__c.field-meta.xml
<CustomField>
    <fullName>QS_Create_Change_Request_Reqs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Change Request Reqs</label>
    <type>Checkbox</type>
</CustomField>